test_suite5/ALAN/test_suite/alan-2022-examples/failing/004890_mutation.alan
source SX6 begin leave K <= / d end
